fix[storybook]: Add correct z-index to the media info on the header when it is open Card: https://app.clickup.com/t/2zg1nmc

--- a/src/styles/elements/_media-info.css
+++ b/src/styles/elements/_media-info.css
@@ -52,6 +52,10 @@
     --media-info-z-index: 0;
 }
 
+.header .header-content + .media-info[open] {
+    --media-info-z-index: 1;
+}
+
 .media-info[open] {
     --media-info-scrim-display: block;
     --media-info-figcaption-display: block;
